[package]
name = "cryptboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "color"] }
fs_extra = "1.3.0"
libc = "0.2.153"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
